Artisan make:test Categories/IndexTest, CSRM CategoryController@index and artisan scribe:generate.
